--- a/html/0.html
+++ b/html/0.html
@@ -1,6 +1,8 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="682-0" class="displacy" width="200" height="137.0" style="max-width: none; height: 137.0px; color: #000000; background: #ffffff; font-family: Arial">
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="47.0">
-    <tspan class="displacy-word" fill="currentColor" x="50">ио╧ымЯ╤Ы</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NNP</tspan>
-</text>
+<svg xmlns="http://www.w3.org/2000/svg" id="682-0" class="displacy"
+     width="200" height="137.0"
+     style="max-width: none; height: 137.0px; color: #000000; background: #ffffff; font-family: Arial">
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="47.0">
+        <tspan class="displacy-word" fill="currentColor" x="50">О©╫о╧О©╫О©╫О©╫О©╫</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NNP</tspan>
+    </text>
 </svg>
