--- a/html/1.html
+++ b/html/1.html
@@ -1,19 +1,24 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="572-0" class="displacy" width="350" height="212.0" style="max-width: none; height: 212.0px; color: #000000; background: #ffffff; font-family: Arial">
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="122.0">
-    <tspan class="displacy-word" fill="currentColor" x="50">ÐÕÃû</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NN</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="122.0">
-    <tspan class="displacy-word" fill="currentColor" x="200">Öìµ¤</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">NNP</tspan>
-</text>
-
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-572-0-0" stroke-width="2px" d="M62,77.0 62,52.0 200.0,52.0 200.0,77.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-572-0-0" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nsubj</textPath>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="572-0" class="displacy"
+     width="350" height="212.0"
+     style="max-width: none; height: 212.0px; color: #000000; background: #ffffff; font-family: Arial">
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="122.0">
+        <tspan class="displacy-word" fill="currentColor" x="50">ï¿½ï¿½ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NN</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M62,79.0 L58,71.0 66,71.0" fill="currentColor"/>
-</g>
+
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="122.0">
+        <tspan class="displacy-word" fill="currentColor" x="200">ï¿½ìµ¤</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">NNP</tspan>
+    </text>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-572-0-0" stroke-width="2px" d="M62,77.0 62,52.0 200.0,52.0 200.0,77.0"
+              fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-572-0-0" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nsubj
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M62,79.0 L58,71.0 66,71.0" fill="currentColor"/>
+    </g>
 </svg>
