--- a/html/14.html
+++ b/html/14.html
@@ -1,123 +1,152 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="157-0" class="displacy" width="1550" height="437.0" style="max-width: none; height: 437.0px; color: #000000; background: #ffffff; font-family: Arial">
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="50">ÄÄ¸ö</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">WP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="200">ÈË¶ù</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">NN</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="350">ÊÇ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">VC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="500">³öÉú</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">VV</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="650">ÔÚ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">IN</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="800">ËÄ´¨Ê¡</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="800">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="950">³É¶¼</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="950">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="1100">µÄ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1100">DEC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="1250">ÕÅ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1250">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="1400">·¨À­</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1400">NNP</tspan>
-</text>
-
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-0" stroke-width="2px" d="M62,302.0 62,277.0 191.0,277.0 191.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-0" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="157-0" class="displacy"
+     width="1550" height="437.0"
+     style="max-width: none; height: 437.0px; color: #000000; background: #ffffff; font-family: Arial">
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="50">ï¿½Ä¸ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">WP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M62,304.0 L58,296.0 66,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-1" stroke-width="2px" d="M212,302.0 212,277.0 341.0,277.0 341.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-1" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nsubj</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="200">ï¿½Ë¶ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">NN</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M212,304.0 L208,296.0 216,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-2" stroke-width="2px" d="M362,302.0 362,277.0 491.0,277.0 491.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-2" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">xcomp</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="350">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">VC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M491.0,304.0 L495.0,296.0 487.0,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-3" stroke-width="2px" d="M662,302.0 662,227.0 1397.0,227.0 1397.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-3" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">case</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="500">ï¿½ï¿½ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">VV</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M662,304.0 L658,296.0 666,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-4" stroke-width="2px" d="M812,302.0 812,277.0 941.0,277.0 941.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-4" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="650">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">IN</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M812,304.0 L808,296.0 816,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-5" stroke-width="2px" d="M962,302.0 962,252.0 1244.0,252.0 1244.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-5" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">det</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="800">ï¿½Ä´ï¿½Ê¡</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="800">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M962,304.0 L958,296.0 966,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-6" stroke-width="2px" d="M962,302.0 962,277.0 1091.0,277.0 1091.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-6" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">case:dec</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="950">ï¿½É¶ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="950">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M1091.0,304.0 L1095.0,296.0 1087.0,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-7" stroke-width="2px" d="M1262,302.0 1262,277.0 1391.0,277.0 1391.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-7" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="1100">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1100">DEC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M1262,304.0 L1258,296.0 1266,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-157-0-8" stroke-width="2px" d="M512,302.0 512,202.0 1400.0,202.0 1400.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-157-0-8" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">obl</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="1250">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1250">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M1400.0,304.0 L1404.0,296.0 1396.0,296.0" fill="currentColor"/>
-</g>
+
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="1400">ï¿½ï¿½ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1400">NNP</tspan>
+    </text>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-0" stroke-width="2px" d="M62,302.0 62,277.0 191.0,277.0 191.0,302.0"
+              fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-0" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M62,304.0 L58,296.0 66,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-1" stroke-width="2px"
+              d="M212,302.0 212,277.0 341.0,277.0 341.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-1" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nsubj
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M212,304.0 L208,296.0 216,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-2" stroke-width="2px"
+              d="M362,302.0 362,277.0 491.0,277.0 491.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-2" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">xcomp
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M491.0,304.0 L495.0,296.0 487.0,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-3" stroke-width="2px"
+              d="M662,302.0 662,227.0 1397.0,227.0 1397.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-3" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">case
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M662,304.0 L658,296.0 666,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-4" stroke-width="2px"
+              d="M812,302.0 812,277.0 941.0,277.0 941.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-4" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M812,304.0 L808,296.0 816,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-5" stroke-width="2px"
+              d="M962,302.0 962,252.0 1244.0,252.0 1244.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-5" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">det
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M962,304.0 L958,296.0 966,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-6" stroke-width="2px"
+              d="M962,302.0 962,277.0 1091.0,277.0 1091.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-6" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">case:dec
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M1091.0,304.0 L1095.0,296.0 1087.0,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-7" stroke-width="2px"
+              d="M1262,302.0 1262,277.0 1391.0,277.0 1391.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-7" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M1262,304.0 L1258,296.0 1266,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-157-0-8" stroke-width="2px"
+              d="M512,302.0 512,202.0 1400.0,202.0 1400.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-157-0-8" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">obl
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M1400.0,304.0 L1404.0,296.0 1396.0,296.0" fill="currentColor"/>
+    </g>
 </svg>
