--- a/html/19.html
+++ b/html/19.html
@@ -1,58 +1,72 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="534-0" class="displacy" width="800" height="437.0" style="max-width: none; height: 437.0px; color: #000000; background: #ffffff; font-family: Arial">
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="50">qQ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">RB</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="200">ÊÇ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">VC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="350">464233062</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">CD</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="500">ÊÇ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">VC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="650">ÄÇÎ»</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">DT</tspan>
-</text>
-
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-534-0-0" stroke-width="2px" d="M62,302.0 62,202.0 650.0,202.0 650.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-534-0-0" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nsubj</textPath>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="534-0" class="displacy"
+     width="800" height="437.0"
+     style="max-width: none; height: 437.0px; color: #000000; background: #ffffff; font-family: Arial">
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="50">qQ</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">RB</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M62,304.0 L58,296.0 66,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-534-0-1" stroke-width="2px" d="M212,302.0 212,227.0 647.0,227.0 647.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-534-0-1" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">cop</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="200">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">VC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M212,304.0 L208,296.0 216,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-534-0-2" stroke-width="2px" d="M362,302.0 362,252.0 644.0,252.0 644.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-534-0-2" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">advmod</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="350">464233062</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">CD</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M362,304.0 L358,296.0 366,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-534-0-3" stroke-width="2px" d="M512,302.0 512,277.0 641.0,277.0 641.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-534-0-3" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">cop</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="500">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">VC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M512,304.0 L508,296.0 516,296.0" fill="currentColor"/>
-</g>
+
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="650">ï¿½ï¿½Î»</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">DT</tspan>
+    </text>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-534-0-0" stroke-width="2px" d="M62,302.0 62,202.0 650.0,202.0 650.0,302.0"
+              fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-534-0-0" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nsubj
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M62,304.0 L58,296.0 66,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-534-0-1" stroke-width="2px"
+              d="M212,302.0 212,227.0 647.0,227.0 647.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-534-0-1" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">cop
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M212,304.0 L208,296.0 216,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-534-0-2" stroke-width="2px"
+              d="M362,302.0 362,252.0 644.0,252.0 644.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-534-0-2" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">advmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M362,304.0 L358,296.0 366,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-534-0-3" stroke-width="2px"
+              d="M512,302.0 512,277.0 641.0,277.0 641.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-534-0-3" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">cop
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M512,304.0 L508,296.0 516,296.0" fill="currentColor"/>
+    </g>
 </svg>
