--- a/html/25.html
+++ b/html/25.html
@@ -1,84 +1,104 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="159-0" class="displacy" width="1100" height="437.0" style="max-width: none; height: 437.0px; color: #000000; background: #ffffff; font-family: Arial">
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="50">dgddddghj</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="200">ÊÇ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">VC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="350">ÄÄ¶ù</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="500">Ò»Î»</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="650">µÄ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">DEC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="800">¾©¶«</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="800">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="950">ÕËºÅ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="950">NN</tspan>
-</text>
-
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-159-0-0" stroke-width="2px" d="M62,302.0 62,202.0 950.0,202.0 950.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-159-0-0" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nsubj</textPath>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="159-0" class="displacy"
+     width="1100" height="437.0"
+     style="max-width: none; height: 437.0px; color: #000000; background: #ffffff; font-family: Arial">
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="50">dgddddghj</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M62,304.0 L58,296.0 66,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-159-0-1" stroke-width="2px" d="M212,302.0 212,227.0 947.0,227.0 947.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-159-0-1" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">cop</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="200">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">VC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M212,304.0 L208,296.0 216,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-159-0-2" stroke-width="2px" d="M362,302.0 362,277.0 491.0,277.0 491.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-159-0-2" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="350">ï¿½Ä¶ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M362,304.0 L358,296.0 366,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-159-0-3" stroke-width="2px" d="M512,302.0 512,252.0 944.0,252.0 944.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-159-0-3" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">det</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="500">Ò»Î»</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M512,304.0 L508,296.0 516,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-159-0-4" stroke-width="2px" d="M512,302.0 512,277.0 641.0,277.0 641.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-159-0-4" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">case:dec</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="650">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">DEC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M641.0,304.0 L645.0,296.0 637.0,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-159-0-5" stroke-width="2px" d="M812,302.0 812,277.0 941.0,277.0 941.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-159-0-5" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="800">ï¿½ï¿½ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="800">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M812,304.0 L808,296.0 816,296.0" fill="currentColor"/>
-</g>
+
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="950">ï¿½Ëºï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="950">NN</tspan>
+    </text>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-159-0-0" stroke-width="2px" d="M62,302.0 62,202.0 950.0,202.0 950.0,302.0"
+              fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-159-0-0" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nsubj
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M62,304.0 L58,296.0 66,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-159-0-1" stroke-width="2px"
+              d="M212,302.0 212,227.0 947.0,227.0 947.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-159-0-1" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">cop
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M212,304.0 L208,296.0 216,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-159-0-2" stroke-width="2px"
+              d="M362,302.0 362,277.0 491.0,277.0 491.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-159-0-2" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M362,304.0 L358,296.0 366,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-159-0-3" stroke-width="2px"
+              d="M512,302.0 512,252.0 944.0,252.0 944.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-159-0-3" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">det
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M512,304.0 L508,296.0 516,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-159-0-4" stroke-width="2px"
+              d="M512,302.0 512,277.0 641.0,277.0 641.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-159-0-4" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">case:dec
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M641.0,304.0 L645.0,296.0 637.0,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-159-0-5" stroke-width="2px"
+              d="M812,302.0 812,277.0 941.0,277.0 941.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-159-0-5" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M812,304.0 L808,296.0 816,296.0" fill="currentColor"/>
+    </g>
 </svg>
