--- a/html/34.html
+++ b/html/34.html
@@ -1,110 +1,136 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="589-0" class="displacy" width="1400" height="437.0" style="max-width: none; height: 437.0px; color: #000000; background: #ffffff; font-family: Arial">
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="50">³µÅÆºÅ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NN</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="200">ÊÇ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">VC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="350">¸Ó</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="500">F98765</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">FW</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="650">µÄ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">DEC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="800">³µ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="800">NN</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="950">ÊÇ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="950">VC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="1100">Ë­</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1100">WP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
-    <tspan class="displacy-word" fill="currentColor" x="1250">µÄ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1250">DEC</tspan>
-</text>
-
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-589-0-0" stroke-width="2px" d="M62,302.0 62,202.0 800.0,202.0 800.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-589-0-0" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nsubj</textPath>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="589-0" class="displacy"
+     width="1400" height="437.0"
+     style="max-width: none; height: 437.0px; color: #000000; background: #ffffff; font-family: Arial">
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="50">ï¿½ï¿½ï¿½Æºï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NN</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M62,304.0 L58,296.0 66,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-589-0-1" stroke-width="2px" d="M212,302.0 212,227.0 797.0,227.0 797.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-589-0-1" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">cop</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="200">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">VC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M212,304.0 L208,296.0 216,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-589-0-2" stroke-width="2px" d="M362,302.0 362,277.0 491.0,277.0 491.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-589-0-2" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="350">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M362,304.0 L358,296.0 366,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-589-0-3" stroke-width="2px" d="M512,302.0 512,252.0 794.0,252.0 794.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-589-0-3" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">det</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="500">F98765</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">FW</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M512,304.0 L508,296.0 516,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-589-0-4" stroke-width="2px" d="M512,302.0 512,277.0 641.0,277.0 641.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-589-0-4" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">case:dec</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="650">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">DEC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M641.0,304.0 L645.0,296.0 637.0,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-589-0-5" stroke-width="2px" d="M812,302.0 812,252.0 1094.0,252.0 1094.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-589-0-5" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nsubj</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="800">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="800">NN</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M812,304.0 L808,296.0 816,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-589-0-6" stroke-width="2px" d="M962,302.0 962,277.0 1091.0,277.0 1091.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-589-0-6" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">cop</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="950">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="950">VC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M962,304.0 L958,296.0 966,296.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-589-0-7" stroke-width="2px" d="M1112,302.0 1112,277.0 1241.0,277.0 1241.0,302.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-589-0-7" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">case:dec</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="1100">Ë­</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1100">WP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M1241.0,304.0 L1245.0,296.0 1237.0,296.0" fill="currentColor"/>
-</g>
+
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="347.0">
+        <tspan class="displacy-word" fill="currentColor" x="1250">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="1250">DEC</tspan>
+    </text>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-589-0-0" stroke-width="2px" d="M62,302.0 62,202.0 800.0,202.0 800.0,302.0"
+              fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-589-0-0" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nsubj
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M62,304.0 L58,296.0 66,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-589-0-1" stroke-width="2px"
+              d="M212,302.0 212,227.0 797.0,227.0 797.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-589-0-1" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">cop
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M212,304.0 L208,296.0 216,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-589-0-2" stroke-width="2px"
+              d="M362,302.0 362,277.0 491.0,277.0 491.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-589-0-2" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M362,304.0 L358,296.0 366,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-589-0-3" stroke-width="2px"
+              d="M512,302.0 512,252.0 794.0,252.0 794.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-589-0-3" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">det
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M512,304.0 L508,296.0 516,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-589-0-4" stroke-width="2px"
+              d="M512,302.0 512,277.0 641.0,277.0 641.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-589-0-4" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">case:dec
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M641.0,304.0 L645.0,296.0 637.0,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-589-0-5" stroke-width="2px"
+              d="M812,302.0 812,252.0 1094.0,252.0 1094.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-589-0-5" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nsubj
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M812,304.0 L808,296.0 816,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-589-0-6" stroke-width="2px"
+              d="M962,302.0 962,277.0 1091.0,277.0 1091.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-589-0-6" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">cop
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M962,304.0 L958,296.0 966,296.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-589-0-7" stroke-width="2px"
+              d="M1112,302.0 1112,277.0 1241.0,277.0 1241.0,302.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-589-0-7" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">case:dec
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M1241.0,304.0 L1245.0,296.0 1237.0,296.0" fill="currentColor"/>
+    </g>
 </svg>
