--- a/html/66.html
+++ b/html/66.html
@@ -1,71 +1,88 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="495-0" class="displacy" width="950" height="362.0" style="max-width: none; height: 362.0px; color: #000000; background: #ffffff; font-family: Arial">
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
-    <tspan class="displacy-word" fill="currentColor" x="50">ÉÏº£</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
-    <tspan class="displacy-word" fill="currentColor" x="200">Â³êÅ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">NNP</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
-    <tspan class="displacy-word" fill="currentColor" x="350">»úµçÉè±¸</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">NN</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
-    <tspan class="displacy-word" fill="currentColor" x="500">ÓÐÏÞ¹«Ë¾</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">NN</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
-    <tspan class="displacy-word" fill="currentColor" x="650">µÄ</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">DEC</tspan>
-</text>
-
-<text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
-    <tspan class="displacy-word" fill="currentColor" x="800">·¨ÈË</tspan>
-    <tspan class="displacy-tag" dy="2em" fill="currentColor" x="800">NN</tspan>
-</text>
-
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-495-0-0" stroke-width="2px" d="M62,227.0 62,152.0 500.0,152.0 500.0,227.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-495-0-0" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="495-0" class="displacy"
+     width="950" height="362.0"
+     style="max-width: none; height: 362.0px; color: #000000; background: #ffffff; font-family: Arial">
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
+        <tspan class="displacy-word" fill="currentColor" x="50">ï¿½Ïºï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="50">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M62,229.0 L58,221.0 66,221.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-495-0-1" stroke-width="2px" d="M212,227.0 212,177.0 497.0,177.0 497.0,227.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-495-0-1" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
+        <tspan class="displacy-word" fill="currentColor" x="200">Â³ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="200">NNP</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M212,229.0 L208,221.0 216,221.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-495-0-2" stroke-width="2px" d="M362,227.0 362,202.0 494.0,202.0 494.0,227.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-495-0-2" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">nmod</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
+        <tspan class="displacy-word" fill="currentColor" x="350">ï¿½ï¿½ï¿½ï¿½ï¿½è±¸</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="350">NN</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M362,229.0 L358,221.0 366,221.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-495-0-3" stroke-width="2px" d="M512,227.0 512,177.0 797.0,177.0 797.0,227.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-495-0-3" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">det</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
+        <tspan class="displacy-word" fill="currentColor" x="500">ï¿½ï¿½ï¿½Þ¹ï¿½Ë¾</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="500">NN</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M512,229.0 L508,221.0 516,221.0" fill="currentColor"/>
-</g>
 
-<g class="displacy-arrow">
-    <path class="displacy-arc" id="arrow-495-0-4" stroke-width="2px" d="M512,227.0 512,202.0 644.0,202.0 644.0,227.0" fill="none" stroke="currentColor"/>
-    <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
-        <textPath xlink:href="#arrow-495-0-4" class="displacy-label" startOffset="50%" fill="currentColor" text-anchor="middle">case:dec</textPath>
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
+        <tspan class="displacy-word" fill="currentColor" x="650">ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="650">DEC</tspan>
     </text>
-    <path class="displacy-arrowhead" d="M644.0,229.0 L648.0,221.0 640.0,221.0" fill="currentColor"/>
-</g>
+
+    <text class="displacy-token" fill="currentColor" text-anchor="middle" y="272.0">
+        <tspan class="displacy-word" fill="currentColor" x="800">ï¿½ï¿½ï¿½ï¿½</tspan>
+        <tspan class="displacy-tag" dy="2em" fill="currentColor" x="800">NN</tspan>
+    </text>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-495-0-0" stroke-width="2px" d="M62,227.0 62,152.0 500.0,152.0 500.0,227.0"
+              fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-495-0-0" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M62,229.0 L58,221.0 66,221.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-495-0-1" stroke-width="2px"
+              d="M212,227.0 212,177.0 497.0,177.0 497.0,227.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-495-0-1" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M212,229.0 L208,221.0 216,221.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-495-0-2" stroke-width="2px"
+              d="M362,227.0 362,202.0 494.0,202.0 494.0,227.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-495-0-2" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">nmod
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M362,229.0 L358,221.0 366,221.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-495-0-3" stroke-width="2px"
+              d="M512,227.0 512,177.0 797.0,177.0 797.0,227.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-495-0-3" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">det
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M512,229.0 L508,221.0 516,221.0" fill="currentColor"/>
+    </g>
+
+    <g class="displacy-arrow">
+        <path class="displacy-arc" id="arrow-495-0-4" stroke-width="2px"
+              d="M512,227.0 512,202.0 644.0,202.0 644.0,227.0" fill="none" stroke="currentColor"/>
+        <text dy="1.25em" style="font-size: 0.8em; letter-spacing: 1px">
+            <textPath xlink:href="#arrow-495-0-4" class="displacy-label" startOffset="50%" fill="currentColor"
+                      text-anchor="middle">case:dec
+            </textPath>
+        </text>
+        <path class="displacy-arrowhead" d="M644.0,229.0 L648.0,221.0 640.0,221.0" fill="currentColor"/>
+    </g>
 </svg>
